# wpc

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.ps1  rustfmt.toml  wpc.sln  wpc.slnx
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: CI.yml
src/: main.rs
src/cli/: mod.rs
src/commands/: direct.rs  global.rs  mod.rs  pac.rs  query.rs
src/proxy/: mod.rs  proxy_service.rs
wpc/: CommandHandlers.cs  Constants.cs  Program.cs  wpc.csproj
