[package]
name = "wpc"
version = "1.3.0"
edition = "2024"
authors = ["HMBSbige"]
description = "System Proxy Control Tool"
repository = "https://github.com/HMBSbige/wpc"

[dependencies]
sysproxy = { git = "https://github.com/clash-verge-rev/sysproxy-rs", branch = "main" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
